# sz_csharp_sdk

./: CMakeLists.txt  ConfigTest.cs  Doxyfile  EngineTest.cs  FileLoader.cs  G2Config.cs  G2ConfigMgr.cs  G2Engine.cs  G2EngineFlags.cs  G2Exceptions.cs  G2Product.cs  ProductTest.cs  README.md  Test.cs  Util.cs
cmake-submodules/: README.md  UseCSharp.cmake
